2021-05-12 Shuwei Ye <yesw@bnl.gov>
  * runpilot2-wrapper.sh
    Improved the python version check to be compatible with python3

2021-05-12 Shuwei Ye <yesw@bnl.gov>
  * pilots_starter.py
    Added some protection on CONFIG_FILES.
  * runpilot2-wrapper.sh
    Added the downloading of queuedata.json to speed up pilot running.

2021-05-12 Shuwei Ye <yesw@bnl.gov>
  * runpilot2-wrapper.sh
    Changed the variable pybin to try "python3" first.

2021-05-12 Shuwei Ye <yesw@bnl.gov>
    Added two json files for DDM-endpoint (GKE-LSST_LOGS) and panda queue
    DOMA_LSST_DEV, the full pilot2.
  * cric_ddmendpoints.json
    Configuration for RSE=GKE-LSST_LOGS
  * cric_pandaqueues.json
    Configuration for panda queue=DOMA_LSST_DEV
  * pilot2-gcs.tgz
    The full pilot2 package with plugin gs.py for GCS bucket
  * pilots_starter.py
    - Changed the location of pilot2
    - Some changes with CONFIG_DIR to make push works for k8s
  * runpilot2-wrapper.sh
    - Changed the location to download cric_pandaqueues.json
    - Changed the location to download cric_ddmendpoints.json


2021-03-22 Shuwei Ye <yesw@bnl.gov>
    Removed the dependencies on CVMFS and ARLB, and made it work
    with the new pilot2 on work directory.
  * runpilot2-wrapper.sh
    Removed the dependencies of CVMFS and ALRB,
    The following functions are removed: 
        check_cvmfs, setup_alrb, setup_local, setup_shoal, 
  * pilots_starter.py
    Removed one option "-a" to pass to pilot2, otherwise the new pilot2
    will use that directory to create a new work directory.

2021-03-22 Shuwei Ye <yesw@bnl.gov>
  * pilots_starter.py
    Changed the location of runpilot2-wrapper.sh to 
    https://raw.githubusercontent.com/